--- a/src/App.css
+++ b/src/App.css
@@ -388,7 +388,7 @@ thead > tr {
   border-bottom: 1px solid #dfe0e0 !important;
 }
 
-.small-match-result-card:hover, .btn-outline-dark:hover, .clickable-card:hover {
+.small-match-result-card:hover:not(.no-hover), .btn-outline-dark:hover, .clickable-card:hover {
   background-color: #e5e6e7 !important;
   border-left: 4px solid #eb9834FF !important;
 }
@@ -401,7 +401,7 @@ thead > tr {
   border-bottom: none !important;
 }
 
-.small-match-result-card.dark:hover, .btn-dark:hover, .clickable-card.dark:hover {
+.small-match-result-card.dark:hover:not(.no-hover), .btn-dark:hover, .clickable-card.dark:hover {
   border-left: 4px solid #eb9834FF !important;
   background-color: rgba(0,0,0, 0.075) !important;
 }
