--- a/src/App.css
+++ b/src/App.css
@@ -369,6 +369,16 @@ a.dropdown-item:hover {
   .selected-player-stat-row {
     font-size: .68vw
   }
+
+  .match-detail-avatar {
+    height: 50px;
+    width: 50px;
+  }
+
+  .match-card-avatar {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .player-card-team-logo {
