added space for playoff race by creating tabbed layout for league and players

--- a/src/App.css
+++ b/src/App.css
@@ -546,3 +546,7 @@ thead > tr {
 .vertically-centered-text {
   margin-bottom: 0px;
 }
+
+.nav-link.dark-theme-text:not(.active) {
+  color: white !important;
+}
