--- a/src/App.css
+++ b/src/App.css
@@ -586,31 +586,31 @@ thead > tr {
 }
 
 .legend-red {
-  background-color: rgb(255, 99, 132)
+  background-color: rgba(255, 99, 132, .4)
 }
 
 .legend-orange {
-  background-color: rgb(255, 159, 64)
+  background-color: rgba(255, 159, 64, .4)
 }
 
 .legend-yellow {
-  background-color: rgb(255, 205, 86)
+  background-color: rgba(255, 205, 86, .4)
 }
 
 .legend-green {
-  background-color: rgb(75, 192, 192)
+  background-color: rgba(75, 192, 192, .4)
 }
 
 .legend-blue {
-  background-color: rgb(54, 162, 235)
+  background-color: rgba(54, 162, 235, .4)
 }
 
 .legend-purple {
-  background-color: rgb(153, 102, 255)
+  background-color: rgba(153, 102, 255, .4)
 }
 
 .legend-grey {
-  background-color: rgb(201, 203, 207)
+  background-color: rgba(201, 203, 207, .4)
 }
 
 .legend-black {
